<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">红包猎手</string>
    <string name="package_name">com.zhaofliu.wechathelper</string>
    <string name="fetch_lucky_money_service_description">打开本服务可以帮助您自动抢微信红包，为了您抢红包更加顺利，强烈推荐您先看一下设置里面的常见问题。\n\n
        为了保证抢红包功能正常使用，请将红包猎手应用放入清理工具白名单中。如果你的手机是华为，请把本应用设置为受保护的应用，如果你的手机是小米，建议锁住该应用，以防止抢红包服务被杀死。\n\n
        欢迎访问网站了解详细 http://www.lskycity.com/wechathelper/index.html</string>

    <string name="foreground_notification_description">红包猎手正在后台运行，点击查看。</string>

    <string name="open_service_tip"><Data><![CDATA[<font color="#ff0000"><b>注意：</b></font>要开启自动抢红包功能，请打开抢红包服务，进入系统设定，打开辅助功能(有的叫无障碍)，点击抢红包服务，打开开关。注意：小米手机的辅助功能在高级设置里面！]]></Data></string>
    <string name="service_already_open">您已经打开了抢红包服务, 为了您抢红包更加顺利，强烈推荐您先看一下设置里面的常见问题。</string>
    <string name="open_service_button">进入辅助功能</string>

    <string name="open_notification_service_tip">为了帮助您在微信在后台的情况抢红包，请允许红包猎手访问您的通知，这样才能帮助您在后台的时候，或者手机息屏情况（仅限无密码的情况下）下抢红包。</string>
    <string name="open_notification_button">打开通知权限</string>
    <string name="unlocking_screen">正在解锁屏幕…</string>

    <string name="uninstall_old_version_tip">我们检测到您安装了另一个版本的红包猎手（老版本或者豌豆荚版），由于一些原因，我们更改了程序包名，为了避免冲突，您需要手动卸载其中一个版本。</string>
    <string name="uninstall_old_version">卸载另一版本</string>

    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_page">主页</string>

    <string name="agree">同意</string>
    <string name="disagree">不同意</string>

    <string name="help">帮助</string>

    <string name="publish_inform">公告发布</string>
    <string name="service_foreground_title">将本服务设置为前台进程</string>
    <string name="service_foreground_summary">开启后会出现一条常驻通知，但是可以降低被系统杀死的概率。</string>
    <string name="service_foreground_description">开启后会出现一条常驻通知，但是可以降低被系统杀死的概率。\n\n
        如果你已经把本应用加入了受保护的应用，可以关闭此开关。\n\n
        把应用加入到受保护的应用，每种机型都不太一样，请在网上搜索您的机型。\n\n</string>


    <string name="refresh">更新</string>
    <string name="refreshing">正在更新…</string>

    <string name="switch_on">已开启</string>
    <string name="switch_off">已关闭</string>

    <string name="random_delay">随机延迟</string>
    <string name="no_delay">不延迟</string>

    <string name="sound_switch_title">开启抢红包音效</string>
    <string name="auto_check_version_switch_title">自动检查更新</string>
    <string name="auto_check_version_switch_summary">一周检查一次</string>
    <string name="user_guide">常见问题</string>
    <string name="feedback">反馈</string>
    <string name="disclaimer">免责声明</string>
    <string name="about_us">关于我们</string>
    <string name="app_info">应用信息</string>
    <string name="version_info">版本信息</string>
    <string name="publish_version_info">(google play版)</string>
    <string name="check_version">检查新版本</string>
    <string name="forward_to_website">前往网页检查更新</string>
    <string name="last_check_date">上次检查时间：</string>
    <string name="no_check_date">没有检查过更新</string>
    <string name="no_new_version">没有新版本</string>
    <string name="have_new_version">有新版本%1$s，请下载最新版本</string>
    <string name="download">下载</string>
    <string name="let_your_friend_download">扫一扫，让朋友也下载</string>
    <string name="share_to_friend">分享红包猎手链接给朋友</string>
    <string name="current_version_and_have_new_version">%1$s(有版本%2$s)</string>
    <string name="lucky_service_label">抢红包服务</string>

    <string name="key_word_wechat">微信</string>
    <string name="key_word_wechat_lucky_money">微信红包</string>
    <string name="key_word_notification">[微信红包]</string>
    <string name="key_word_fetch_lucky_money">领取红包</string>

    //will delete later
    <string name="key_word_open_lucky_money">拆红包</string>

    <string name="key_word_chat_info">聊天信息</string>
    <string name="key_word_emoji">表情</string>
    <string name="key_word_back">返回</string>
    <string name="key_word_switch_to_speak">切换到按住说话</string>
    <string name="key_word_switch_to_keypad">切换到键盘</string>
    <string name="key_word_press_speak">按住 说话</string>
    <string name="key_word_more">更多功能按钮，已折叠</string>
    <string name="key_word_send">发送</string>

    <string name="key_word_button_open">Open</string>
    <string name="key_word_receive_lucky_money">给你发了一个红包</string>
    <string name="key_word_lucky_money_over_24_hour">该红包已超过24小时。如已领取，可在“我的红包”中查看</string>
    <string name="key_word_no_lucky_money">手慢了，红包派完了</string>
    <string name="key_word_loading" tools:ignore="TypographyEllipsis">正在加载...</string>
    <string name="key_word_receive_lucky_money_from_group">发了一个红包，金额随机</string>
    <string name="key_word_money_unit">元</string>
    <string name="no_money_collected">可怜的人儿，还没抢到过红包。。。</string>

    <string name="user_guide_question_0">0.抢红包之前需要什么准备工作？</string>
    <string name="user_guide_answer_0">本应用需要打开一个服务和一个权限，一个是抢红包服务，在辅助功能里面（有的叫无障碍，英文Accessibility），一个是通知访问权，请务必确保这两个权限打开，在本程序的主页会有两个按钮把你带到相应的界面，找到抢红包服务，打开即可。
        如果你在主界面看不到两个按钮，说明已经打开了。
    </string>
    <string name="user_guide_question_1">1.无法打开抢红包服务，提示语言不匹配？</string>
    <string name="user_guide_answer_1">进入语言与输入法设置，找到文字转语音输出，点击首选引擎中选项右边的设定，点击语言，选择使用系统语言。</string>
    <string name="user_guide_question_2">2.红包来了不提示，或者不能自动点开红包是什么原因？</string>
    <string name="user_guide_answer_2">可能的原因有：\n\n
        1.本应用暂时只支持抢微信红包，不支持QQ红包。\n\n
        2.本应用暂时只支持简体中文, 请将系统语言设置为中文。（以后可能会扩展英文和繁体中文）\n\n
        3.有的手机（比如华为，小米等）会不停的杀死后台程序，在华为手机上面请将本应用放在受保护的程序列表，在小米手机上，在最近列表中下拉锁住本应用。\n\n
        4.您可能屏蔽了群信息，对于您屏蔽的群信息，我们无法获取到信息。您可以选择继续屏蔽群消息或者取消屏蔽群消息\n\n
        5.如果以上没有解决您的问题，您可能需要重启通知使用权，您需要去系统里面找到通知使用权，先关闭再打开。\n\n
        6.如果还是没有解决您的问题，请发反馈给我们。</string>
    <string name="user_guide_question_3">3.想在屏幕关的时候自动抢红包怎么办？特别是晚上自动帮我抢红包。</string>
    <string name="user_guide_answer_3">在这种情况下，您可以把手机的解锁为无，这样我们在收到红包的时候，就可以帮你自动抢红包了。注意是设置成无，而不是滑动，部分手机支持滑动。注意，在有屏幕锁定密码的情况下，本应用暂时不支持锁屏情况下抢红包。</string>


    <string name="disclaimer_content">APP免责声明\n\n
        1、一切移动客户端用户在下载并浏览我们APP软件时均被视为已经仔细阅读本条款并完全同意。凡以任何方式登陆本APP，或直接、间接使用本APP资料者，均被视为自愿接受本应用相关声明和用户服务协议的约束。\n\n
    2.用户明确并同意其使用APP网络服务所存在的风险将完全由其本人承担；因其使用APP网络服务而产生的一切后果也由其本人承担，APP对此不承担任何责任。\n\n
    3.对于因不可抗力或因黑客攻击、通讯线路中断等APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用APP，APP不承担任何责任。\n\n
    4.本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。\n\n
    5.本APP相关声明版权及其修改权、更新权和最终解释权均属APP开发团队所有。</string>


    <string name="team_intro">来自于宇宙无敌的YanZhiBaoBiao工作室为您倾情奉献，欢迎大家提各种反馈，当然，你也可以通过反馈发来表扬.^_^</string>
    <string name="team_name">关于我们</string>
    <string name="zhaofeng_nickname">Running snail</string>
    <string name="zhaofeng_intro">梦想是要有的，万一要是见鬼了呢～</string>
    <string name="xianpeng_nickname">百无聊赖的凯文－张</string>
    <string name="xianpeng_intro">作为颜值担当，每天后面都跟着那么多妹子，真是烦死了。</string>
    <string name="yuanyuan_nickname">圆圆</string>
    <string name="yuanyuan_intro">四体不勤，五谷不分，文不能测字，武不能防身</string>

    <string name="fetch_my_feedback">我的反馈</string>
    <string name="no_feedback">您没有发送过反馈。</string>
    <string name="send_feedback_empty">发送的字符为空, 请重新填写再发。</string>
    <string name="sending_feedback">正在发送您的反馈…</string>
    <string name="send_feedback_success">发送反馈成功，感谢您的反馈。</string>
    <string name="send_feedback_fail">发送反馈失败，请过段时间再试，或者去官方网站查看下载最新版。</string>

    <string name="tip_add_white_list">应用经常被系统杀掉？把本应用加入白名单吧。</string>
    <string name="check_normal_question_if_cannot_work">抢红包出现问题？点击查看常见问题</string>
    <string name="check_new_version">太久没更新？去网站查看新版本</string>
    <string name="pay_for_free">抢了大红包，打赏个一块二块。</string>

    <string name="thx_title">特别感谢</string>
    <string name="thx_msg">感谢帮忙测试的android team成员，感谢你们帮忙在年会测试我们的应用，感谢Aileen帮忙设计新的应用logo，感谢lwh帮忙制作反馈系统的后台。</string>


</resources>
