<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_already_open"
        android:layout_marginBottom="40dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <Button
        android:id="@+id/user_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_guide"/>

    <Button
        android:id="@+id/main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page"/>

</LinearLayout>