<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="?dividerHorizontal">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/service_foreground_switch"
        android:text="@string/service_foreground_title"
        android:textAppearance="?textAppearanceListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <TextView
        android:text="@string/help"
        android:textAppearance="?textAppearancePopupMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#e5e5e5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/service_foreground_description"/>

</LinearLayout>