<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    tools:context=".ui.DisclaimerActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardElevation="2dp"
        app:cardCornerRadius="2dp"
        android:layout_marginBottom="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="16dp"
                android:text="@string/disclaimer_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        style="?buttonBarStyle">
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?buttonBarNegativeButtonStyle"
            android:text="@string/disagree"/>
        <Button
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?buttonBarPositiveButtonStyle"
            android:text="@string/agree"/>
    </LinearLayout>

</LinearLayout>