<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/teamintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="@dimen/team_avatar_width"
                    android:layout_height="@dimen/team_avatar_height"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:src="@drawable/team"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/avatar_margin"
                    android:layout_marginRight="@dimen/avatar_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:text="@string/team_name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/team_intro"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_weight="0.6" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/zhaofengintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/zhaofeng"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/avatar_margin"
                    android:layout_marginRight="@dimen/avatar_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhaofeng_nickname"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/zhaofeng_intro"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_weight="0.6" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/xianpengintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/xianpeng"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/avatar_margin"
                    android:layout_marginRight="@dimen/avatar_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xianpeng_nickname"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginBottom="@dimen/text_margin"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/xianpeng_intro"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_weight="0.6"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/yuanyuanintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:src="@drawable/yuanyuan"


                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/avatar_margin"
                    android:layout_marginRight="@dimen/avatar_margin"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yuanyuan_nickname"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginBottom="@dimen/text_margin"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/yuanyuan_intro"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_weight="0.6"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"


                >
                <TextView
                    android:id="@+id/mail_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_email"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="@dimen/text_margin"
                    />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/team_wechat"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                    <!--/>-->
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>